--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.2.0",
+    "await": "^0.2.6",
+    "babel-preset-stage-3": "^6.22.0",
     "bluebird": "^3.3.4",
     "body-parser": "^1.16.0",
+    "cors": "^2.8.1",
+    "css-loader": "^0.28.0",
     "express": "^4.14.0",
     "express-cors": "0.0.3",
     "history": "^4.6.1",
@@ -25,31 +30,31 @@
     "react-router": "^3.0.1",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^5.0.0-alpha.4",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "2.2.0",
+    "style-loader": "^0.16.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
-    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.22.0",
-    "chai": "^3.5.0",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.0",
     "enzyme": "^2.8.0",
-    "fetch-mock": "5.9.3",
+    "fetch-mock": "^5.9.4",
     "jest": "^19.0.2",
     "jest-css-modules": "^1.1.0",
-    "node-sass": "^4.5.1",
+    "jest-enzyme": "^3.0.0",
+    "node-sass": "^4.5.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "redux-mock-store": "^1.2.2",
     "sass-loader": "^6.0.3",
-    "sinon": "1.17.7",
     "style-loader": "^0.16.1",
-    "webpack": "1.14.0",
+    "webpack": "^1.15.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0"
   }
